--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta property="og:title" content="Wikimedium">
-    <meta property="og:description" content="Проект разработан для мзучения основ разметки HTMLи каскадных таблиц стилей CSS">
-    <meta property="og:image" content="images/narcomfin.jpg">
+    <meta property="og:description" content="Проект разработан для мзучения основ веб-верстки, гипертекстовой разметки HTML и каскадных таблиц стилей CSS">
+    <meta property="og:image" content="https://raw.githubusercontent.com/fedorovvdmitry/wikimedium/main/images/narkomfin.jpg">
     <meta property="og:type" content="profile">
     <meta property="og:url" content="">
     <title>Дом Наркомфина - Википедия</title>
