--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta property="og:title" content="Wikimedium">
-    <meta property="og:description" content="Проект разработан для мзучения основ веб-верстки, гипертекстовой разметки HTML и каскадных таблиц стилей CSS">
-    <meta property="og:image" content="https://raw.githubusercontent.com/fedorovvdmitry/wikimedium/main/images/narkomfin.jpg">
+    <meta property="og:description" content="Проект разработан для изучения основ веб-верстки, гипертекстовой разметки HTML и каскадных таблиц стилей CSS">
+    <meta property="og:image" content="images/narkomfin.jpg">
     <meta property="og:type" content="profile">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://raw.githubusercontent.com/fedorovvdmitry/wikimedium/main/images/narkomfin.jpg">
     <title>Дом Наркомфина - Википедия</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicons/favicon.ico" />
