--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Wikimedium">
-    <meta property="og:description" content="Проект разработан для мзучения основ веб-верстки, гипертекстовой разметки HTML и каскадных таблиц стилей CSS">
-    <meta property="og:image" content="images/narcomfin.jpg">
+    <meta property="og:description" content="Проект разработан для bзучения основ веб-верстки, гипертекстовой разметки HTML и каскадных таблиц стилей CSS">
+    <meta property="og:image" content="images/narkomfin.jpg">
     <meta property="og:type" content="profile">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://raw.githubusercontent.com/fedorovvdmitry/wikimedium/main/images/narkomfin.jpg">
     <title>О проекте</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/style.css">
