--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="images/narkomfin.jpg">
     <meta property="og:type" content="profile">
     <meta property="og:url" content="https://raw.githubusercontent.com/fedorovvdmitry/wikimedium/main/images/narkomfin.jpg">
-    <title>Дом Наркомфина - Википедия</title>
+    <title>Дом Наркомфина хуй - Википедия</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicons/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicons/favicon.png" />
@@ -64,12 +64,10 @@
     <article>
       <h1>Дом Наркомфина</h1>
       <p><strong>Дом Наркомфина</strong> — один из знаковых памятников архитектуры советского <a href="https://ru.wikipedia.org/wiki/Авангард_(искусство)">авангарда</a> и <a href="https://ru.wikipedia.org/wiki/Конструктивизм_(искусство)">конструктивизма</a>. Построен в <a href="https://ru.wikipedia.org/wiki/1928_год">1928</a> — <a href="https://ru.wikipedia.org/wiki/1930_год">1930 годах</a> по проекту архитекторов <a href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">Моисея Гинзбурга</a>, <a href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатия Милиниса</a> и инженера <a href="https://ru.wikipedia.org/wiki/Сергей_Львович_Прохоров">Сергея Прохорова</a> для работников <a href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов_СССР">Народного комиссариата финансов СССР</a> (Наркомфина). Автор замысла дома Наркомфина М. Я. Гинзбург определял его как «опытный дом переходного типа». Дом находится в <a href="https://ru.wikipedia.org/wiki/Москва">Москве</a> по адресу: <a href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинский бульвар</a>, дом 25, корпус 1.</p>
-      <hr>
-      <p>Материал из Википедии — свободной энциклопедии</p><br>
-      <p><a href="https://ru.wikipedia.org/wiki/Памятник_архитектуры"target="_blank">памятник архитектуры</a> (местного значения)</p>
       <p>С начала 1990-х годов, дом находился в аварийном состоянии, был трижды включён в список «100 главных зданий мира, которым грозит уничтожение». В 2017—2020 годах отреставрирован по проекту <a href="https://ru.wikipedia.org/wiki/Архитектурное_бюро">АБ</a> «Гинзбург Архитектс», функционирует как элитный жилой дом.</p>
-        <h2 id="1_1">История создания дома Наркомфина</h2>
-        <hr>
+      <img src="images/narkomfin.jpg" alt="Дом Наркомфина">
+      
+      <h2 id="1_1">История создания дома Наркомфина</h2>
         <h3 id="1_1_1">ОСА и Стройком</h3>
         <p>Из всех различных индивидуумов и групп, занимавшихся реформированием повседневной жизни и консолидации социализма в 1920-е годы архитекторы занимали исключительное положение. Архитектурная инновация Дома Коммуны представляет наиболее полную попытку осуществления реформирования быта и консолидации советского социализма. Самой влиятельной группой архитекторов в этой области являлась ОСА (Объединение Современных Архитекторов, возглавляемая М. Я. Гинзбургом). В то время как прочие реформаторы быта пытались внедрить реформистские практики в остатки существующих дореволюционных форм, группа ОСА (образована в 1925 году М. Я. Гинзбургом и братьями Весниными), более известная как конструктивисты, пыталась решить проблему «нового быта» напрямую созданием принципиально новой архитектуры и материальной культуры, основанных на коммунистических отношениях производства и потребления.
 
@@ -368,37 +366,38 @@
           Исследовавший «миграцию» обитателей дома Виктор Бачли сообщает о регистрации по всем типам квартир дома Наркомфина замещения выбывших в результате репрессий семей чинами НКВД, как по отдельным квартирам, так и по комнатам в больших коммунальных квартирах. Все годы существования СССР информация о проживавших в той ли иной квартире жильцах, а равным образом, и данные о том, куда делись все эти люди, носили характер государственной тайны, и задавать такие вопросы было не принято. Несмотря на проживание в доме известных партийных и советских деятелей (элите большевиков по В. Бачли) на доме Наркомфина никогда не было установлено никаких памятных знаков, как и не возникало самой постановки вопроса о сохранения такой памяти, видимо, потому, что жизнь большинства указанных деятелей трагически закончилась на Бутовском полигоне.
         </p>
         <h3>Известные жители</h3>
-        <p><ul>
-          <li>Антонов-Овсеенко Владимир Александрович, кв. 48 — нарком юстиции РСФСР, с женой Софьей Ивановной Левиной. Расстрелян 10.02.1938 года, жена расстреляна 08.02.1938 года.</li>
-          <li>Бган Ольга Павловна, кв. ? — актриса театра и кино.</li>
-          <li>Бухарцев Дмитрий Павлович, кв. 29 — кандидат экономических наук, корреспондент газеты «Известия» в Германии в 1934—1936 годах, сотрудник ОГПУ-НКВД; расстрелян 03.06.1937 года.</li>
-          <li>Вишневский Александр Александрович, кв. 35 (5 этаж) — доктор медицинских наук (1936), позднее главный хирург Советской армии.</li>
-          <li>Воскресенский Кирилл Александрович, кв. ? — учёный-биолог, основатель Беломорской биологической станции (1938).</li>
-          <li>Герасимов Иван Семёнович, кв. 51 (7 этаж) — управляющий делами СНК РСФСР; расстрелян 26.10.1937 года.</li>
-          <li>Гордеев Михаил Григорьевич, кв. 27 — публицист, коллекционер живописи.</li>
-          <li>Гостынский Владимир Викторович, кв. 18 — начальник управления НКФ, ближайший помощник Н. Милютина, с семьёй.</li>
-          <li>Гуревич Моисей Григорьевич, кв. 41 — заместитель наркома здравоохранения РСФСР. Расстрелян 26.10.1937 года.</li>
-          <li>Гурович, Эдуард Яковлевич, кв. 8 — начальник Восточного центрального управления речного транспорта Наркомата водного транспорта СССР. Расстрелян 08.01.1938 года.</li>
-          <li>Дейнека Александр Александрович, кв. 7, позже кв. 35 — советский живописец с женой Серафимой Ивановной Лычевой.</li>
-          <li>Жуков Савелий Григорьевич, кв. 11 — заместитель наркома Наркомата Совхозов РСФСР — репрессирован.</li>
-          <li>Инсарова (Окорокова) Ольга Фёдоровна, кв. 11 (после Жукова С. Г.) — оперная певица Большого театра.</li>
-          <li>Карклин Мартын Мартынович, кв. 44 — председатель ЦК союза работников хозяйственных учреждений. Вдовец, проживал вместе с детьми от первого брака (Искра и Ким) и гражданской женой — членом Верховного Суда РСФСР — Пуре Паулиной Павловной. Арестован 25 декабря 1937 года, расстрелян 11 апреля 1938 года. Дети отправлены в детдом (спецприёмник НКВД) в бывшем Даниловском монастыре. Паулина Павловна арестована в августе 1938 года, сослана.</li>
-          <li>Карп Сергей Бенедиктович, кв. 47 — председатель Госплана РСФСР. Расстрелян 30.10.1937 года. Жена Сарра Давыдовна Крейндель репрессирована как «член семьи врага народа».</li>
-          <li>Келин Пётр Иванович, кв. ? — художник и преподаватель живописи, ближайший друг Н. А. Милютина[страница не указана 253 дня].</li>
-          <li>Копылов Николай Васильевич, кв. 12 (4 этаж) — управляющий трестом «Оргэнерго» Наркомата тяжёлой промышленности СССР. Арестован 30.09.1936 г., расстрелян 20.06.1938 года.</li>
-          <li>Крыленко Николай Васильевич, кв. 46 — нарком юстиции СССР. Арестован, расстрелян 29.07.1938 года.</li>
-          <li>Крючков Пётр Петрович, кв. 13 — многолетний секретарь А. М. Горького, к 1937 году директор Музея А. М. Горького, с женой Крючковой Елизаветой Захарьевной. Расстрелян 15.03.1938 года, жена расстреляна 17.09.1938. После ареста семьи Крючковых квартира № 13 перешла к семье Н. А. Семашко.</li>
-          <li>Куперман, Абрам Борухович, кв. 35 (после А. А. Вишневского), 7 (после А. А. Дейнеки).</li>
-          <li>Лебедь Дмитрий Захарович, кв. 43 (5 этаж) — зам. председателя Совнаркома РСФСР. Расстрелян 30.10.1937 года. Квартира 43 аннулирована, на её месте образована коммунальная кухня.</li>
-          <li>Лисицын Николай Васильевич, кв. 50 (7 этаж) — нарком земледелия РСФСР. Расстрелян 22.08.1938 года.</li>
-          <li>Милютин Николай Александрович, кв. 49 (7 этаж) — в 1924—1929 годах наркомфин РСФСР, в 1929 году председатель Малого СНК — один из идеологов «новых форм социалистического жилища». Квартира Милютина, спроектированная и построенная им для своей семьи с согласия М. Гинзбурга, находилась на крыше здания, в помещении, запланированном под вентиляционную камеру, оборудование для которой не было закуплено из-за нехватки денег. Двухуровневая квартира — первый в мире «пентхауз».</li>
-          <li>Полуян Ян Васильевич, кв. 26 — начальник Главного энергетического управления Наркомата коммунального хозяйства РСФСР, расстрелян 8.10.1937 года.</li>
-          <li>Рыскулов Турар Рыскулович, кв. 40 — заместитель председателя СНК РСФСР.</li>
-          <li>Семашко Николай Александрович, кв. 14 — бывший нарком здравоохранения РСФСР, с семьёй.</li>
-          <li>Соколов Николай Константинович, кв. 42 — председатель Правления Госбанка СССР; арестован 21.12.1940 года, расстрелян 30.07.1941 года.</li>
-          <li>Соловьёв Владимир Александрович, кв. ? — драматург.</li>
-          <li>Сулимов Даниил Егорович, кв. 45 — председатель СНК РСФСР. Проживал вместе с женой Сулимовой Е. Н., сыном Владимиром и племянницей Агрипиной Сулимовой. Сулимов был арестован 27.06.1937 года, расстрелян 27.11.1937 года. Спустя 3 недели после его ареста была арестована жена Елена Николаевна, осуждена на 25 лет лагерей, этапирована в Магадан. Сына и племянницу выселили из квартиры.</li>
-        </ul>
+        <p>
+          <ul>
+            <li>Антонов-Овсеенко Владимир Александрович, кв. 48 — нарком юстиции РСФСР, с женой Софьей Ивановной Левиной. Расстрелян 10.02.1938 года, жена расстреляна 08.02.1938 года.</li>
+            <li>Бган Ольга Павловна, кв. ? — актриса театра и кино.</li>
+            <li>Бухарцев Дмитрий Павлович, кв. 29 — кандидат экономических наук, корреспондент газеты «Известия» в Германии в 1934—1936 годах, сотрудник ОГПУ-НКВД; расстрелян 03.06.1937 года.</li>
+            <li>Вишневский Александр Александрович, кв. 35 (5 этаж) — доктор медицинских наук (1936), позднее главный хирург Советской армии.</li>
+            <li>Воскресенский Кирилл Александрович, кв. ? — учёный-биолог, основатель Беломорской биологической станции (1938).</li>
+            <li>Герасимов Иван Семёнович, кв. 51 (7 этаж) — управляющий делами СНК РСФСР; расстрелян 26.10.1937 года.</li>
+            <li>Гордеев Михаил Григорьевич, кв. 27 — публицист, коллекционер живописи.</li>
+            <li>Гостынский Владимир Викторович, кв. 18 — начальник управления НКФ, ближайший помощник Н. Милютина, с семьёй.</li>
+            <li>Гуревич Моисей Григорьевич, кв. 41 — заместитель наркома здравоохранения РСФСР. Расстрелян 26.10.1937 года.</li>
+            <li>Гурович, Эдуард Яковлевич, кв. 8 — начальник Восточного центрального управления речного транспорта Наркомата водного транспорта СССР. Расстрелян 08.01.1938 года.</li>
+            <li>Жуков Савелий Григорьевич, кв. 11 — заместитель наркома Наркомата Совхозов РСФСР — репрессирован.</li>
+            <li>Инсарова (Окорокова) Ольга Фёдоровна, кв. 11 (после Жукова С. Г.) — оперная певица Большого театра.</li>
+            <li>Карклин Мартын Мартынович, кв. 44 — председатель ЦК союза работников хозяйственных учреждений. Вдовец, проживал вместе с детьми от первого брака (Искра и Ким) и гражданской женой — членом Верховного Суда РСФСР — Пуре Паулиной Павловной. Арестован 25 декабря 1937 года, расстрелян 11 апреля 1938 года. Дети отправлены в детдом (спецприёмник НКВД) в бывшем Даниловском монастыре. Паулина Павловна арестована в августе 1938 года, сослана.</li>
+            <li>Карп Сергей Бенедиктович, кв. 47 — председатель Госплана РСФСР. Расстрелян 30.10.1937 года. Жена Сарра Давыдовна Крейндель репрессирована как «член семьи врага народа».</li>
+            <li>Келин Пётр Иванович, кв. ? — художник и преподаватель живописи, ближайший друг Н. А. Милютина[страница не указана 253 дня].</li>
+            <li>Копылов Николай Васильевич, кв. 12 (4 этаж) — управляющий трестом «Оргэнерго» Наркомата тяжёлой промышленности СССР. Арестован 30.09.1936 г., расстрелян 20.06.1938 года.</li>
+            <li>Крыленко Николай Васильевич, кв. 46 — нарком юстиции СССР. Арестован, расстрелян 29.07.1938 года.</li>
+            <li>Крючков Пётр Петрович, кв. 13 — многолетний секретарь А. М. Горького, к 1937 году директор Музея А. М. Горького, с женой Крючковой Елизаветой Захарьевной. Расстрелян 15.03.1938 года, жена расстреляна 17.09.1938. После ареста семьи Крючковых квартира № 13 перешла к семье Н. А. Семашко.</li>
+            <li>Куперман, Абрам Борухович, кв. 35 (после А. А. Вишневского), 7 (после А. А. Дейнеки).</li>
+            <li>Лебедь Дмитрий Захарович, кв. 43 (5 этаж) — зам. председателя Совнаркома РСФСР. Расстрелян 30.10.1937 года. Квартира 43 аннулирована, на её месте образована коммунальная кухня.</li>
+            <li>Лисицын Николай Васильевич, кв. 50 (7 этаж) — нарком земледелия РСФСР. Расстрелян 22.08.1938 года.</li>
+            <li>Милютин Николай Александрович, кв. 49 (7 этаж) — в 1924—1929 годах наркомфин РСФСР, в 1929 году председатель Малого СНК — один из идеологов «новых форм социалистического жилища». Квартира Милютина, спроектированная и построенная им для своей семьи с согласия М. Гинзбурга, находилась на крыше здания, в помещении, запланированном под вентиляционную камеру, оборудование для которой не было закуплено из-за нехватки денег. Двухуровневая квартира — первый в мире «пентхауз».</li>
+            <li>Полуян Ян Васильевич, кв. 26 — начальник Главного энергетического управления Наркомата коммунального хозяйства РСФСР, расстрелян 8.10.1937 года.</li>
+            <li>Рыскулов Турар Рыскулович, кв. 40 — заместитель председателя СНК РСФСР.</li>
+            <li>Семашко Николай Александрович, кв. 14 — бывший нарком здравоохранения РСФСР, с семьёй.</li>
+            <li>Соколов Николай Константинович, кв. 42 — председатель Правления Госбанка СССР; арестован 21.12.1940 года, расстрелян 30.07.1941 года.</li>
+            <li>Соловьёв Владимир Александрович, кв. ? — драматург.</li>
+            <li>Сулимов Даниил Егорович, кв. 45 — председатель СНК РСФСР. Проживал вместе с женой Сулимовой Е. Н., сыном Владимиром и племянницей Агрипиной Сулимовой. Сулимов был арестован 27.06.1937 года, расстрелян 27.11.1937 года. Спустя 3 недели после его ареста была арестована жена Елена Николаевна, осуждена на 25 лет лагерей, этапирована в Магадан. Сына и племянницу выселили из квартиры.</li>
+            <li>Дейнека Александр Александрович, кв. 7, позже кв. 35 — советский живописец с женой Серафимой Ивановной Лычевой.</li>
+          </ul>
           В период отделки здания в нём находилась мастерская М. Я. Гинзбурга (см. фото, автор Владимир Грюнталь). По воспоминаниям старожилов, живших здесь в 1940—1950-х годах, в первую очередь, Милютиных (кв. 49), Семашко (кв. 14), Зайцевых (кв. 3), при заселении дома Гинзбургу была предложена в нём квартира, но он отказался, отдав предпочтение жилью традиционной архитектуры.
 
           Контингент живущих был в какой-то мере однородным лишь в первые годы после заселения дома. После чистки 1934-го, арестов 1937—1938 годов и окончания Великой Отечественной войны он существенным образом изменился. В конце 1950-х годов дом был передан в общегородское подчинение, небольшое число номенклатурных жильцов переселилось в благоустроенные квартиры на Ленинском проспекте, а освободившиеся помещения были заполнены работниками коммунальных служб и ЖЭК-ов.
