--- a/library.html
+++ b/library.html
@@ -25,9 +25,9 @@
 
     <!-- основной контент -->
     <article>
-        <h1>Библиотека Алвара Аалто — центральная городская библиотека Выборга</h1>
+        <h1>Библиотека Алвара Аалто</h1>
         <p>Центральная городская библиотека Выборга построена в 1933—1935 годах по проекту финского архитектора Алвара Аалто. Это один из первых проектов Аалто, принесших архитектору мировую известность.</p>
-        <p>Здание имеет две основные части: сама библиотека и помещения для проведения различных мероприятий, комнаты для досуга.  Библиотека в Выборге была одной из первых в Финляндии,  где были предусмотрены возможности для другой деятельности. При проектировании библиотеки особое внимание было уделено многофункциональности помещений, в том числе засчет разделения пространства с помощью штор.</p>
+        <blockquote>«Задача состояла в проектировании двух основных частей: собственно библиотеки с ее различными отделами и группы помещений широкого общественного назначения – для лекций и работы разных кружков... Здесь и книгохранилище и читальные залы. Поэтому центральная часть здания решена в виде замкнутого объема, изолированного от внешнего воздействия. В основе архитектурного решения этой части – создание оптимальных условий освещения, отвечающей гигиене зрения, а также разработка систем отопления и вентиляции» – писал Аалто.</blockquote>
         <img src="images/library.png" alt="Здание библиотеки Алвара Аалтоа в Выборге">
         <h2>Архитектура</h2>
         <p>Здание считается вехой в творчестве архитектора, ибо обозначает переход Аалто от национально окрашенного неоклассицизма к упрощённым формам регионального модернизма. Именно здесь впервые проявилась уникальная черта его архитектурного стиля — сочетание строгости функционализма и нежной плавности природных линий. Начиная с Выборгской библиотеки творческая манера Аалто тяготеет к использованию естественных материалов и, в особенности, дерева. Сенсацию в архитектурном мире вызвал волнообразный акустический потолок лекционного зала, обрушившийся в послевоенные годы, когда здание библиотеки пустовало. В настоящее время потолок восстановлен по оригинальным чертежам. В потолке читального зала устроены круглые окна, через которые поступает солнечный свет, при этом стены зала окон не содержат.</p>
@@ -56,16 +56,15 @@
     </article>
 </body>
 <footer>
-    <div>
     <img id="footer_logo" src="images/logo.svg" alt="">
-    </div>
     <div class="footer_content">
-        <a href="/index.html">Дом Наркомфина</a>
-        <a href="/library.html">Библиотека Алвара Аалто</a>
-        <a href="/about.html">О проекте</a>
+        <a class="footer_link" href="/index.html">Дом Наркомфина</a>
+        <a class="footer_link" href="/library.html">Библиотека Алвара Аалто</a>
+        <a class="footer_link" href="/about.html">О проекте</a>
     </div>
-    <div>
+    <a href="https://design.hse.ru/dir/programming">
         <img id="footer_hse_logo" src="images/hse_logo.svg" alt="Логотип школы дизайна">
-    </div>
+    </a>
+    
 </footer>
 </html>
