Add menubar in Library page

--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
     <nav class="sidebar">
       <h2>Содержание</h2>
         <ol>
-          <li><a href="#1_1">История создания дома Наркомфина</a></li>
-        <ol>
+          <li><a href="#1_1">История создания</a></li>
+          <ol>
             <li><a href="#1_1_1">ОСА и Стройком</a></li>
             <li><a href="#1_1_2">Сотрудничество М. Я. Гинзбурга и Н. А. Милютина</a></li>
-        </ol>
-        <li><a href="#1_2">Идеология «опытного коммунального дома переходного типа»</a></li>
-        <li><a href="#1_3">Участок</a></li>
-        <li><a href="#1_4">Состав жилого комплекса</a></li>
-        <li><a href="#1_5">Архитектура</a></li>
-        <ol>
+          </ol>
+          <li><a href="#1_2">Идеология</a></li>
+          <li><a href="#1_3">Участок</a></li>
+          <li><a href="#1_4">Состав жилого комплекса</a></li>
+          <li><a href="#1_5">Архитектура</a></li>
+          <ol>
             <li><a href="#1_5_1">Пространственная организация комплекса</a></li>
             <li><a href="#1_5_2">Дом Наркомфина и 5 принципов Ле Корбюзье</a></li>
             <li><a href="#1_5_3">Конструкции и материалы</a></li>
             <li><a href="#1_5_4">Интерьеры</a></li>
-        </ol>
-        <li><a href="#1_6">Критика проекта</a></li>
+          </ol>
+          <li><a href="#1_6">Критика проекта</a></li>
             <ol>
-                <li><a href="#1_6_1">С технической стороны</a></li>
-                <li><a href="#1_6_2">С бытовой стороны</a></li>
+              <li><a href="#1_6_1">С технической стороны</a></li>
+              <li><a href="#1_6_2">С бытовой стороны</a></li>
             </ol>
-        <li><a href="#1_7">История эксплуатации и проект реставрации</a></li>
+          <li><a href="#1_7">История эксплуатации и проект реставрации</a></li>
         <ol>
             <li><a href="#1_7_1">Развитие городского окружения</a></li>
             <li><a href="#1_7_2">Перестройки</a></li>
