--- a/library.html
+++ b/library.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicons/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicons/favicon.png" />
+    <script src="javascripts/jquery-3.7.1.js" charset="utf-8"></script>
 </head>
 <body>
     <!-- шапка сайта-->
@@ -23,15 +24,27 @@
         </ul>
     </nav>
 
+    <!-- меню сайдбара  -->
+    <nav class="sidebar">
+      <h2>Содержание</h2>
+        <ol>
+            <li><a href="#1_1">Архитектура</a></li>
+            <li><a href="#1_2">История библиотеки</a></li>
+            <ol>
+                <li><a href="#1_2_1">Реставрация</a></li>
+            </ol>
+        </ol>
+    </nav>
+
     <!-- основной контент -->
     <article>
         <h1>Библиотека Алвара Аалто</h1>
         <p>Центральная городская библиотека Выборга построена в 1933—1935 годах по проекту финского архитектора Алвара Аалто. Это один из первых проектов Аалто, принесших архитектору мировую известность.</p>
         <blockquote>«Задача состояла в проектировании двух основных частей: собственно библиотеки с ее различными отделами и группы помещений широкого общественного назначения – для лекций и работы разных кружков... Здесь и книгохранилище и читальные залы. Поэтому центральная часть здания решена в виде замкнутого объема, изолированного от внешнего воздействия. В основе архитектурного решения этой части – создание оптимальных условий освещения, отвечающей гигиене зрения, а также разработка систем отопления и вентиляции» – писал Аалто.</blockquote>
         <img src="images/library.png" alt="Здание библиотеки Алвара Аалтоа в Выборге">
-        <h2>Архитектура</h2>
+        <h2 id="1_1">Архитектура</h2>
         <p>Здание считается вехой в творчестве архитектора, ибо обозначает переход Аалто от национально окрашенного неоклассицизма к упрощённым формам регионального модернизма. Именно здесь впервые проявилась уникальная черта его архитектурного стиля — сочетание строгости функционализма и нежной плавности природных линий. Начиная с Выборгской библиотеки творческая манера Аалто тяготеет к использованию естественных материалов и, в особенности, дерева. Сенсацию в архитектурном мире вызвал волнообразный акустический потолок лекционного зала, обрушившийся в послевоенные годы, когда здание библиотеки пустовало. В настоящее время потолок восстановлен по оригинальным чертежам. В потолке читального зала устроены круглые окна, через которые поступает солнечный свет, при этом стены зала окон не содержат.</p>
-        <h2>История библиотеки</h2>
+        <h2 id="1_2">История библиотеки</h2>
         <p>Строительство библиотеки началось в 1927 году на средства, которые завещала вдова выборгского мецената Юхо Лаллукка, состоятельная горожанка Мария Лаллукка. 13 октября 1935 года произошло торжественное её открытие. Вскоре библиотека стала известна во всём мире как эталон библиотечного здания.</p>
         <img src="images/library_old.jpg" alt="Здание библиотеки сразу после постройки">
         <p>Здесь Алвар Аалто смог учесть все особенности важные для этой сферы деятельности: режимы хранения книг, особенности работы библиотекарей, и, конечно, потребности читателей. Уникален волнообразный потолок читального зала, который является отличительной особенностью архитектурного стиля Алвара Аалто. Самостоятельно разработанная им система бестеневого освещения библиотеки, с помощью воронкообразных светильников.</p>
@@ -44,7 +57,7 @@
         <p>В перестроечные годы финансирование библиотеки практически прекратилось. Но благодаря открытию нескольких филиалов петербургских ВУЗов, круг читателей значительно расширился. Для поддержания существования библиотеки пришлось ввести платный абонемент, но со временем надобность в нём отпала, и библиотека стала вновь свободной для посещения. В 1998 году библиотека приобрела своё современное название — «Центральная городская библиотека Алвара Аалто в Выборге».</p>
         <img src="images/library4.jpg" alt="Лекционный зал">
         <p>Помимо архитектурных особенностей библиотека имеет уникальную книжную коллекцию: например, собрание отдела краеведческой литературы, который формировался — и продолжает формироваться — на основе фонда, подаренного библиотекой финского города Лаппеенранта. Это книги о Выборге и Карелии на финском, шведском, немецком и других языках. За годы реставрации здания библиотеки это собрание пополнилось, возможно, самой цельной в России подборкой книг о творчестве Алвара Аалто и о самом здании библиотеки. Среди них, например, трёхтомник биографа Алвара Аалто Горана Шильдта с автографом автора.</p>
-        <h3>Реставрация</h2>
+        <h3 id="1_2_1">Реставрация</h2>
         <p>Здание не подверглось значительным разрушениям во время Второй мировой войны, однако было заброшено в течение десяти лет после ее окончания и за счет этого серьезно пострадало. В 1955–1961 годах была проведена реконструкция библиотеки, которая остановила процесс обветшания, однако нанесла еще больший ущерб оригинальной архитектуре Аалто. Архитекторы Евгений Розенблюм и Александр Швер, работавшие над проектом реконструкции, к сожалению, не имели доступа к авторским чертежам и, кроме того, были ограничены в выборе мебели и отделочных материалов — приходилось пользоваться тем, что было доступно на советских заводах.</p>
         <div class="gallery">
             <img class="gallery_img" src="images/library5.jpg" alt="Лекционный зал">
@@ -58,9 +71,9 @@
 <footer>
     <img id="footer_logo" src="images/logo.svg" alt="">
     <div class="footer_content">
-        <a class="footer_link" href="/index.html">Дом Наркомфина</a>
-        <a class="footer_link" href="/library.html">Библиотека Алвара Аалто</a>
-        <a class="footer_link" href="/about.html">О проекте</a>
+        <a class="footer_link" href="index.html">Дом Наркомфина</a>
+        <a class="footer_link" href="library.html">Библиотека Алвара Аалто</a>
+        <a class="footer_link" href="about.html">О проекте</a>
     </div>
     <a href="https://design.hse.ru/dir/programming">
         <img id="footer_hse_logo" src="images/hse_logo.svg" alt="Логотип школы дизайна">
