--- a/about.html
+++ b/about.html
@@ -14,18 +14,11 @@
     <link rel="icon" type="image/x-icon" href="images/favicons/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicons/favicon.png" />
     <style>
-        html {
+        /* html {
             background: gray;
             display: block;
             height: 3120px;
-        }
-        body {
-            width: 1440px;
-            background-color: white;
-            display: block;
-            margin: 0 auto;
-            position: relative;
-        }
+        } */
         /* body::after { 
             position: absolute;
             top: 0;
@@ -100,4 +93,15 @@
     <script async src="https://static.addtoany.com/menu/page.js"></script>
     <!-- AddToAny END -->
 </body>
+<footer>
+    <img id="footer_logo" src="images/logo.svg" alt="">
+    <div class="footer_content">
+        <a class="footer_link" href="index.html">Дом Наркомфина</a>
+        <a class="footer_link" href="library.html">Библиотека Алвара Аалто</a>
+        <a class="footer_link" href="about.html">О проекте</a>
+    </div>
+    <a href="https://design.hse.ru/dir/programming">
+        <img id="footer_hse_logo" src="images/hse_logo.svg" alt="Логотип школы дизайна">
+    </a>
+</footer>
 </html>
