--- a/about.html
+++ b/about.html
@@ -44,9 +44,8 @@
     <!-- контент-->
     <Section>
        <div>
-            <h1>Наглядный пример, чтобы учиться веб-вёрстке</h1>
-            <p>Разработан для изучения основ веб-верстки, языка гипертекстовой
-            разметки HTML и каскадных таблиц стиле CSS
+            <h1>Наглядный пример,<br>чтобы учиться веб-вёрстке</h1>
+            <p>Разработан для изучения основ веб-верстки,<br>языка гипертекстовой разметки HTML<br>и каскадных таблиц стиле CSS
             </p>
        </div>
        <div>
@@ -62,7 +61,7 @@
             <img src="images/about2.png" alt="мокапы айфона и макбука с открытым проектом wikimedium">
         </div>
         <div>
-            <h1>С нуля до первого сайта под компьютеры, смартфоны и планшеты</h1>
+            <h1>С нуля до первого сайта<br>под компьютеры, смартфоны<br>и планшеты</h1>
             <p>
             Чтобы начать изучать веб-верстку на этом проекте, не требуется каких-то специальных знаний, кроме базового умения пользоваться компьютером   
             </p>
@@ -72,36 +71,33 @@
      <Section>
         <div>
              <h1>Реальный проект, реальный рабочий процесс</h1>
-             <p>Обучение приближено к работе в реальной жизни, работа разбита на этапы от типографики, создания меню и использования эффектов, до адаптации под мобильные устройства и использования JavaScript скриптов
+             <p>Обучение приближено к работе в реальной жизни, работа разбита на этапы от типографики, создания меню и использования эффектов,<br>до адаптации под мобильные устройства<br>и использования JavaScript скриптов
              </p>
         </div>
         <div>
-         <img 
+         <img class="img_border"
              src="images/about3.png" 
              alt="скрин десктопной версии проекта из браузера"
          />
         </div>
      </Section>
+     <section class="footer_about">
+        <h1>Возможность самостоятельного<br>и курируемого обучения</h1>
+        <p>Вы можете обучаться самостоятельно по исходному коду проекта,<br>выложенному на GitHub, или записаться на курс «Основы<br>веб-вёрстки» в Школе Дизайна НИУ ВШЭ</p>
+        <div>
+            <a class="button_white" href="https://github.com/fedorovvdmitry/wikimedium/" target="_blank">Исходный код на GitHub</a>
+            <a class="button_black" href="https://design.hse.ru/dir/programming" target="_blank">Курс в Школе Дизайна</a>
+        </div>
+     </section>
      <!-- AddToAny BEGIN -->
-    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+    <!-- <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
     <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
     <a class="a2a_button_telegram"></a>
     <a class="a2a_button_skype"></a>
     <a class="a2a_button_vk"></a>
     <a class="a2a_button_odnoklassniki"></a>
     </div>
-    <script async src="https://static.addtoany.com/menu/page.js"></script>
+    <script async src="https://static.addtoany.com/menu/page.js"></script> -->
     <!-- AddToAny END -->
 </body>
-<footer>
-    <img id="footer_logo" src="images/logo.svg" alt="">
-    <div class="footer_content">
-        <a class="footer_link" href="index.html">Дом Наркомфина</a>
-        <a class="footer_link" href="library.html">Библиотека Алвара Аалто</a>
-        <a class="footer_link" href="about.html">О проекте</a>
-    </div>
-    <a href="https://design.hse.ru/dir/programming">
-        <img id="footer_hse_logo" src="images/hse_logo.svg" alt="Логотип школы дизайна">
-    </a>
-</footer>
 </html>
