--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
         <p>Вы можете обучаться самостоятельно по исходному коду проекта,<br>выложенному на GitHub, или записаться на курс «Основы<br>веб-вёрстки» в Школе Дизайна НИУ ВШЭ</p>
         <div>
             <a class="button_white" href="https://github.com/fedorovvdmitry/wikimedium/" target="_blank">Исходный код на GitHub</a>
-            <a class="button_black" href="https://design.hse.ru/dir/programming" target="_blank">Курс в Школе Дизайна</a>
+            <a class="button_black" href="https://dzen.ru/media/zakharday/kurs-osnovy-vebverstki-64ea21a12e9b9f1bce101234" target="_blank">Курс в Школе Дизайна</a>
         </div>
      </section>
      <!-- AddToAny BEGIN -->
