--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="icon" type="image/x-icon" href="images/favicons/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicons/favicon.png" />
     <script src="javascripts/jquery-3.7.1.js" charset="utf-8"></script>
+    <style>
+      body {
+        background-color: #f9f9f9;
+        @media screen and (max-with: 767px) and (orientation: portrait){
+	        body {
+		      background-color: white;
+          }
+	      }
+      }
+    </style>
   </head>
   <body>
     <!-- шапка сайта -->
